# sudonomicon

./: CONTRIBUTING.md  Makefile  README.md  bibliography.md  common.mk  config.py  glossary.md  pyproject.toml
01_intro/: index.md
02_fs/: index.md
03_proc/: index.md
04_jobs/: index.md
05_http/: index.md
07_virt/: index.md
docs/: bibliography.html  code_of_conduct.html  contributing.html  glossary.html  index.html  license.html
docs/01_intro/: index.html
docs/02_fs/: index.html
docs/03_proc/: index.html
docs/04_jobs/: index.html
docs/05_http/: index.html
docs/07_virt/: index.html
docs/auth/: index.html
docs/author/: index.html
docs/bib/: index.html
docs/colophon/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/finale/: index.html
docs/fs/: index.html
docs/glossary/: index.html
docs/http/: index.html
docs/intro/: index.html
docs/jobs/: index.html
docs/license/: index.html
docs/proc/: index.html
docs/s01_intro/: index.html
docs/s02_fs/: chmod_example.py.html  index.html  random_bits.py.html
docs/s03_proc/: catch_interrupt.py.html  flush.py.html  fork.py.html  fork_exec.py.html  index.html  show_timer.py.html
docs/s04_jobs/: index.html
docs/s05_http/: bird_server_slice.py.html  bird_server_whole.py.html  dump_structure.py.html  file_server_safe.py.html  index.html  (+7 more)
s01_intro/: index.md
s02_fs/: index.md  random_bits.out
s03_proc/: index.md
s04_jobs/: index.md
s05_http/: index.md
s06_auth/: index.md
s07_virt/: index.md
s08_finale/: index.md
src/: index.md
templates/: page.html
(+10 files in other folders)
